<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="hello_blank_fragment">Hello Fragment With Functionality</string>
    <string name="test_procedure">Test Procedure</string>
    <string name="schedule_time_assessment">Schedule Time Assessment</string>
    <string name="visual_acuity_description">Read the questions and write the correct answer and get the result.</string>
    <string name="down_arrow">Down arrow</string>
    <string name="procedure_image">Procedure image</string>
    <string name="verification_image">Verification image</string>
    <string name="confirmation_prompt">Confirmation Prompt</string>
    <string name="confirmation_prompt_description">Tap \'Yes\' to Submit your answer, \'No\' to try again.</string>
    <string name="decision_image">Decision image</string>
    <string name="check_answer_accuracy">Check Answer Accuracy</string>
    <string name="feedback_description">Get Confirmation Answer: Green = correct, Red = try again.</string>
    <string name="instruction_checkbox">I have read all the instructions carefully.</string>
    <string name="start_test_button">Start the test</string>
    <string name="abcd">ABCD</string>
    <string name="about">About</string>
    <string name="important_note_nstudybuddy_is_designed_to_enhance_your_study_experience_by_providing_planning_tools_and_a_community_platform_however_it_is_crucial_to_recognize_that_studybuddy_is_not_a_substitute_for_professional_educational_advice_or_consultation_for_personalized_guidance_on_educational_planning_including_specific_academic_or_professional_concerns_we_recommend_consulting_with_educators_advisors_or_mentors_in_your_field_your_educational_success_and_well_being_are_our_priority_and_we_encourage_you_to_use_studybuddy_as_a_complement_to_not_a_replacement_for_professional_guidance_and_support">Important Note:\nStudyBuddy is designed to enhance your study experience by providing planning tools and a community platform. However, it is crucial to recognize that StudyBuddy is not a substitute for professional educational advice or consultation. For personalized guidance on educational planning, including specific academic or professional concerns, we recommend consulting with educators, advisors, or mentors in your field. Your educational success and well-being are our priority, and we encourage you to use StudyBuddy as a complement to, not a replacement for, professional guidance and support.</string>
    <string name="what_is_studybuddy">What is StudyBuddy?</string>
    <string name="studybuddy_is_the_ultimate_study_planning_and_community_platform_designed_for_students_and_professionals_alike_tailored_study_plans_ensure_you_stay_organized_and_on_track_with_your_academic_or_professional_goals_engage_in_vibrant_communities_to_share_insights_and_collaborate_with_peers_while_messaging_features_provide_seamless_communication_for_support_and_guidance_whether_you_re_a_school_student_college_attendee_or_a_working_professional_studybuddy_empowers_you_to_optimize_your_learning_journey_and_achieve_success">StudyBuddy is the ultimate study planning and community platform designed for students and professionals alike. Tailored study plans ensure you stay organized and on track with your academic or professional goals. Engage in vibrant communities to share insights and collaborate with peers, while messaging features provide seamless communication for support and guidance. Whether you\'re a school student, college attendee, or a working professional, StudyBuddy empowers you to optimize your learning journey and achieve success.</string>
    <string name="copyright_2024_all_rights_reserved">Copyright © 2024 All rights reserved</string>
    <string name="account_settings">Account Settings</string>
    <string name="enable_or_disable_two_step_verification_for_added_security">Enable or disable two-step verification for added security</string>
    <string name="two_step_verification">Two Step Verification</string>
    <string name="delete_account">Delete Account</string>
    <string name="permanently_delete_your_account_and_all_associated_data">Permanently delete your account and all associated data</string>
    <string name="additional_account_settings">Additional Account Settings</string>
    <string name="manage_additional_settings_for_your_account">Manage additional settings for your account</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="profile_privacy">Profile Privacy</string>
    <string name="profile_notification">Profile Notification</string>
    <string name="profile_chat">Profile Chat</string>
    <string name="profile_schedule_reminder">Profile Schedule Reminder</string>
    <string name="profile_app_language">Profile App Language</string>
    <string name="generate_random_avatar">Generate Random Avatar</string>
    <string name="last_seen_today_at_12_00_pm">Last seen today at 12:00 PM</string>
    <string name="sender_s_name">Sender\'s Name</string>
    <string name="emoji">Emoji</string>
    <string name="attach_file">Attach File</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send Message</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="school_student">School Student</string>
    <string name="college_student">College Student</string>
    <string name="working_professional">Working Professional</string>
    <string name="update_profile">Update Profile</string>
    <string name="an_android_app_providing_personalized_study_plans_and_collaborative_features_for_school_students_college_students_and_working_professionals">An Android app providing personalized study plans and collaborative features for school students, college students, and working professionals.</string>
    <string name="studybuddy_is_a_versatile_android_app_that_offers_personalized_study_plans_messaging_capabilities_community_forums_and_a_comprehensive_subject_list_to_help_school_students_college_students_and_professionals_manage_their_learning_schedules_effectively_enhance_productivity_and_achieve_your_academic_or_professional_goals_with_tailored_plans_vibrant_community_interactions_and_seamless_communication_join_studybuddy_to_optimize_your_learning_journey_and_succeed">StudyBuddy is a versatile Android app that offers personalized study plans, messaging capabilities, community forums, and a comprehensive subject list to help school students, college students, and professionals manage their learning schedules effectively. Enhance productivity and achieve your academic or professional goals with tailored plans, vibrant community interactions, and seamless communication. Join StudyBuddy to optimize your learning journey and succeed.</string>
    <string name="get_started">Get Started</string>
    <string name="generate_languages">Generate Languages</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_id_is_not_verified_resend_verification_link">Email id is not Verified!!! Resend Verification link</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="last_seen_and_online">Last Seen and Online</string>
    <string name="manage_who_can_see_your_last_seen_and_online_status">Manage who can see your last seen and online status</string>
    <string name="who_can_see_my_last_seen">Who can see my last seen</string>
    <string name="everyone">Everyone</string>
    <string name="my_contacts">My Contacts</string>
    <string name="my_contacts_except">My Contacts Except…</string>
    <string name="nobody">Nobody</string>
    <string name="who_can_see_when_i_m_online">Who can see when I\'m online</string>
    <string name="same_as_last_seen">Same as Last Seen</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="choose_who_can_see_your_profile_photo">Choose who can see your profile photo</string>
    <string name="who_can_see_my_profile_photo">Who can see my Profile Photo</string>
    <string name="status">Status</string>
    <string name="control_who_can_see_your_status_updates">Control who can see your status updates</string>
    <string name="who_can_see_my_status_updates">Who can see my Status Updates</string>
    <string name="read_receipts">Read Receipts</string>
    <string name="turn_off_read_receipts">Turn off read receipts</string>
    <string name="disappearingmessages">DisappearingMessages</string>
    <string name="start_new_chats_with_a_disappearing_messages_timer_set_to">Start new Chats with a disappearing messages timer set to</string>
    <string name="_24_hours">24 Hours</string>
    <string name="_7_days">7 Days</string>
    <string name="_90_days">90 Days</string>
    <string name="off">Off</string>
    <string name="account">Account</string>
    <string name="avatar">Avatar</string>
    <string name="upload_your_avatar">Upload your avatar</string>
    <string name="privacy">Privacy</string>
    <string name="manage_your_privacy_settings">Manage your privacy settings</string>
    <string name="notification">Notification</string>
    <string name="manage_your_notifications">Manage your notifications</string>
    <string name="chat">Chat</string>
    <string name="manage_chat_settings">Manage chat settings</string>
    <string name="schedule_reminder">Schedule Reminder</string>
    <string name="set_your_schedule_reminders">Set your schedule reminders</string>
    <string name="app_language">App Language</string>
    <string name="select_your_app_language">Select your app language</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="favourites">Favourites</string>
    <string name="groups">Groups</string>
    <string name="logout">Logout</string>
    <string name="logout_from_the_app">Logout from the App</string>
    <string name="by_click_on_this_you_can_get_help">by click on this you can get help</string>
    <string name="need_help">Need Help</string>
    <string name="role">Role</string>
    <string name="abcd_gmail_com">abcd@gmail.com</string>
    <string name="email_id">Email id</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="avatar_name">Avatar Name</string>
    <string name="this_is_a_receiver_s_message">This is a receiver\'s message.</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="this_is_a_sender_s_message">This is a sender\'s message.</string>
    <string name="_10_32_am">10:32 AM</string>
    <string name="message_content_here">Message content here</string>
    <string name="_12_45_pm">12:45 PM</string>
    <string name="studybuddy_image">String Image</string>
</resources>